--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 server.port=8081
 
+spring.cloud.config.server.git.uri=https://github.com/eduardcantillo/practica-pragma.git
+spring.cloud.config.server.git.uri.searchPath=config-data
+spring.cloud.config.server.git.uri.username=${GIT_USER}
+spring.cloud.config.server.git.uri.password=${GIT_PASSWORD}
+
+spring.security.name=root
+spring.security.password=s3cr3t
+
+
+
 
