--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=8081
 spring.cloud.config.server.git.uri=https://github.com/eduardcantillo/practica-pragma.git
 spring.cloud.config.server.git.uri.searchPaths=config-data
 spring.cloud.config.server.git.uri.username=${GIT_USER}
-spring.cloud.config.server.git.uri.password=${GIT_PASSWORD}
+spring.cloud.config.server.git.uri.password=${GIT_PASSWORD}}
+spring.cloud.config.server.git.default-label=main
 
 spring.security.name=root
 spring.security.password=s3cr3t
