--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 server.port=8081
 
 spring.cloud.config.server.git.uri=https://github.com/eduardcantillo/practica-pragma.git
-spring.cloud.config.server.git.uri.search-paths=config-data
-spring.cloud.config.server.git.uri.username=${GIT_USER}
-spring.cloud.config.server.git.uri.password=${GIT_PASSWORD}
+spring.cloud.config.server.git.search-paths=config-data
+spring.cloud.config.server.git.username=${GIT_USER}
+spring.cloud.config.server.git.password=${GIT_PASSWORD}
 spring.cloud.config.server.git.default-label=main
 
-spring.security.name=root
-spring.security.password=s3cr3t
-
+spring.security.user.name=root
+spring.security.user.password=s3cr3t
 
 
 
