--- a/foto/src/main/resources/application.properties
+++ b/foto/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.application.name=service-foto
 server.port=8002
 
-spring.data.mongodb.database=service_foto
+spring.cloud.config.uri=http://localhost:8081
+spring.cloud.config.username=root
+spring.cloud.config.password=s3cr3t
+spring.config.import=optional:configserver:
