--- a/service-customer/src/main/resources/application.properties
+++ b/service-customer/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 spring.application.name=service-customer
 server.port=8001
 
-spring.datasource.url=jdbc:mysql://localhost:3306/service_customer?serverTimezone=America/Bogota&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=debug
-spring.batch.job.enabled=true
+spring.cloud.config.uri=http://localhost:8081
+spring.cloud.config.username=root
+spring.cloud.config.password=s3cr3t
+spring.config.import=optional:configserver:
