--- a/config-data/service-customer.properties
+++ b/config-data/service-customer.properties
@@ -9,3 +9,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 spring.batch.job.enabled=true
+
+eureka.client.service-url.defaultZone:http://localhost:8099/eureka
