--- a/config-data/service-foto.properties
+++ b/config-data/service-foto.properties
@@ -2,3 +2,5 @@ spring.application.name=service-foto
 server.port=8002
 
 spring.data.mongodb.database=service_foto
+
+eureka.client.service-url.defaultZone:http://localhost:8099/eureka
