--- a/registry-service/src/main/resources/application.properties
+++ b/registry-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name=service-registry
 
+spring.cloud.config.uri=http://localhost:8081
+spring.cloud.config.username=root
+spring.cloud.config.password=s3cr3t
+spring.config.import=optional:configserver:
