--- a/foto/build.gradle
+++ b/foto/build.gradle
@@ -15,11 +15,13 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '3.0.3'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config', version: '3.0.4'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.9'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
