--- a/config-data/service-customer.properties
+++ b/config-data/service-customer.properties
@@ -11,3 +11,6 @@ logging.level.org.hibernate.SQL=debug
 spring.batch.job.enabled=true
 
 eureka.client.service-url.defaultZone:http://localhost:8099/eureka
+
+feign.circuitbreaker.enabled=true
+management.endpoints.web.exposure.include=*
