--- a/foto/src/main/resources/application.properties
+++ b/foto/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8002
-
+spring.application.name=service-foto
 spring.cloud.config.uri=http://localhost:8081
 spring.cloud.config.username=root
 spring.cloud.config.password=s3cr3t
