--- a/service-customer/build.gradle
+++ b/service-customer/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.9'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.8.RELEASE'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix-dashboard', version: '2.2.8.RELEASE'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.5.1'
 	
 	
 	compileOnly 'org.projectlombok:lombok'
