--- a/config-data/service-foto.properties
+++ b/config-data/service-foto.properties
@@ -6,4 +6,7 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
 eureka.client.service-url.defaultZone:http://localhost:8099/eureka
 
+management.endpoints.web.exposure.include=*
+hystrix.dashboard.proxy-stream-allow-list=*
+
 
