--- a/config-data/service-customer.properties
+++ b/config-data/service-customer.properties
@@ -14,3 +14,4 @@ eureka.client.service-url.defaultZone:http://localhost:8099/eureka
 
 feign.circuitbreaker.enabled=true
 management.endpoints.web.exposure.include=*
+hystrix.dashboard.proxy-stream-allow-list=*
