--- a/foto/build.gradle
+++ b/foto/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config', version: '3.0.4'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.5.1'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.9'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
