--- a/foto/build.gradle
+++ b/foto/build.gradle
@@ -21,7 +21,10 @@ dependencies {
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.5.1'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.9'
+	implementation group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
 
 
 	compileOnly 'org.projectlombok:lombok'
