--- a/service-customer/build.gradle
+++ b/service-customer/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.8.RELEASE'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix-dashboard', version: '2.2.8.RELEASE'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.5.1'
+	implementation group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.3.1'
 	
 	
 	compileOnly 'org.projectlombok:lombok'
