--- a/service-customer/src/main/resources/application.properties
+++ b/service-customer/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.cloud.config.username=root
 spring.cloud.config.password=s3cr3t
 spring.config.import=optional:configserver:
 
+spring.boot.admin.client.url=http://localhost:8095
+
