--- a/foto/src/main/resources/application.properties
+++ b/foto/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.cloud.config.password=s3cr3t
 spring.config.import=optional:configserver:
 
 spring.boot.admin.client.url=http://localhost:8095
+spring.boot.admin.client.instance.prefer-ip=true
