--- a/config-data/service-gateway.yml
+++ b/config-data/service-gateway.yml
@@ -17,6 +17,7 @@ spring:
           uri: lb://service-customer
           predicates:
             - Path=/customer/**
+	    - Path=/id-type/**
         - id: servicio-foto
           uri: lb://service-foto
           predicates:
