--- a/config-data/service-gateway.yml
+++ b/config-data/service-gateway.yml
@@ -21,3 +21,7 @@ spring:
           uri: lb://service-foto
           predicates:
             - Path=/foto/**
+        - id: servicio-client
+          uri: lb://service-customer
+          predicates:
+            -Path=/id-type/**
