--- a/config-data/service-foto.properties
+++ b/config-data/service-foto.properties
@@ -1,7 +1,7 @@
 spring.application.name=service-foto
 server.port=8002
 
-sspring.data.mongodb.uri=mongodb+srv://eduardcantillo:12345@practicas.iwvt5.mongodb.net/foto?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://eduardcantillo:12345@practicas.iwvt5.mongodb.net/foto?retryWrites=true&w=majority
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
 eureka.client.service-url.defaultZone:http://localhost:8099/eureka
